test/types/imag/opequals2.1.good
opequals2.chpl:5: error: type mismatch in assignment from complex(128) to imag(64)
